Fixed overlapping bug for headings -  desktop view

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 100;
   text-align: center;
   padding-block: 10px;
   backdrop-filter: blur(40px);
